--- a/WindAssignment/Base/Utils/TextFields/LeftIconTextField.xib
+++ b/WindAssignment/Base/Utils/TextFields/LeftIconTextField.xib
@@ -26,6 +26,7 @@
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cHt-v2-ItK">
                     <rect key="frame" x="16" y="0.0" width="368" height="34"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="uuB-DV-hcw"/>
                     </constraints>
