--- a/WindAssignment/Storyboards/Base.lproj/Main.storyboard
+++ b/WindAssignment/Storyboards/Base.lproj/Main.storyboard
@@ -110,7 +110,6 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1s-ff-Znh" customClass="NavigationBar" customModule="WindAssignment" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="59" width="393" height="47"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47" id="nv6-97-rSY"/>
                                 </constraints>
@@ -155,8 +154,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g3e-yn-FtU">
                                 <rect key="frame" x="18" y="228" width="357" height="120"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1234" textAlignment="natural" minimumFontSize="48" translatesAutoresizingMaskIntoConstraints="NO" id="n6i-Cx-alL">
-                                        <rect key="frame" x="22" y="8" width="97" height="80"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="natural" minimumFontSize="48" translatesAutoresizingMaskIntoConstraints="NO" id="n6i-Cx-alL">
+                                        <rect key="frame" x="22" y="8" width="99" height="80"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="h1l-AT-pe0"/>
                                         </constraints>
@@ -169,8 +169,8 @@
                                         <color key="textColor" red="0.3411764705882353" green="0.35686274509803922" blue="0.38431372549019605" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance USDC 381.244050" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Cn-Rd-N8l">
-                                        <rect key="frame" x="205.66666666666663" y="83" width="143.33333333333337" height="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance USDC 0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Cn-Rd-N8l">
+                                        <rect key="frame" x="243" y="83" width="106" height="16"/>
                                         <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="12"/>
                                         <color key="textColor" red="0.3411764706" green="0.35686274509999999" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -184,6 +184,9 @@
                                         <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Max"/>
+                                        <connections>
+                                            <action selector="maxButtonAction:" destination="4Xt-DK-S8a" eventType="touchUpInside" id="ATl-RH-IZV"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -211,34 +214,58 @@
                                     <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8kc-rq-FWZ"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insufficient Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1g-vp-7lM">
+                                <rect key="frame" x="32" y="372" width="141" height="21"/>
+                                <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
+                                <color key="textColor" red="0.8784313725490196" green="0.2627450980392157" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mr0-UG-VdN" customClass="RoundedButton" customModule="WindAssignment" customModuleProvider="target">
+                                <rect key="frame" x="276" y="368.66666666666669" width="85" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="kuo-nW-wyk"/>
+                                    <constraint firstAttribute="width" constant="85" id="u4B-ko-nQP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Add fund"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="h0O-pQ-O65"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="g3e-yn-FtU" firstAttribute="top" secondItem="bcr-Ed-ffa" secondAttribute="bottom" constant="16" id="1uh-Su-Nkt"/>
+                            <constraint firstItem="j1g-vp-7lM" firstAttribute="leading" secondItem="h0O-pQ-O65" secondAttribute="leading" constant="32" id="2Zo-Ms-D4u"/>
                             <constraint firstItem="c1s-ff-Znh" firstAttribute="trailing" secondItem="h0O-pQ-O65" secondAttribute="trailing" id="5jp-DM-E6E"/>
                             <constraint firstItem="h0O-pQ-O65" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dyc-M5-XXU" secondAttribute="trailing" constant="5" id="6yF-Ny-cvd"/>
                             <constraint firstItem="c1s-ff-Znh" firstAttribute="leading" secondItem="h0O-pQ-O65" secondAttribute="leading" id="Azy-Vl-vql"/>
                             <constraint firstItem="g3e-yn-FtU" firstAttribute="leading" secondItem="bcr-Ed-ffa" secondAttribute="leading" id="CYE-31-q78"/>
                             <constraint firstItem="bcr-Ed-ffa" firstAttribute="leading" secondItem="dyc-M5-XXU" secondAttribute="leading" id="GK9-qJ-M97"/>
+                            <constraint firstItem="h0O-pQ-O65" firstAttribute="trailing" secondItem="Mr0-UG-VdN" secondAttribute="trailing" constant="32" id="IbD-Cl-vdP"/>
                             <constraint firstItem="dyc-M5-XXU" firstAttribute="top" secondItem="c1s-ff-Znh" secondAttribute="bottom" constant="25" id="Jq4-bO-eER"/>
+                            <constraint firstItem="Mr0-UG-VdN" firstAttribute="centerY" secondItem="j1g-vp-7lM" secondAttribute="centerY" id="JyD-VI-i1n"/>
                             <constraint firstItem="Rjj-dP-l3A" firstAttribute="top" secondItem="g3e-yn-FtU" secondAttribute="bottom" constant="101" id="KPg-Cp-dyA"/>
                             <constraint firstItem="c1s-ff-Znh" firstAttribute="top" secondItem="h0O-pQ-O65" secondAttribute="top" id="LEl-be-1x5"/>
                             <constraint firstItem="bcr-Ed-ffa" firstAttribute="top" secondItem="dyc-M5-XXU" secondAttribute="bottom" constant="8" symbolic="YES" id="MZJ-aC-Bbn"/>
+                            <constraint firstItem="j1g-vp-7lM" firstAttribute="top" secondItem="g3e-yn-FtU" secondAttribute="bottom" constant="24" id="ZGx-2e-0B3"/>
                             <constraint firstItem="dyc-M5-XXU" firstAttribute="leading" secondItem="h0O-pQ-O65" secondAttribute="leading" constant="18" id="b1N-X3-Ddy"/>
                             <constraint firstItem="Rjj-dP-l3A" firstAttribute="leading" secondItem="h0O-pQ-O65" secondAttribute="leading" constant="18" id="cll-Y7-9Ta"/>
                             <constraint firstItem="g3e-yn-FtU" firstAttribute="trailing" secondItem="bcr-Ed-ffa" secondAttribute="trailing" id="gzU-9C-yhE"/>
                             <constraint firstItem="h0O-pQ-O65" firstAttribute="trailing" secondItem="Rjj-dP-l3A" secondAttribute="trailing" constant="18" id="jEE-Iy-VXA"/>
                             <constraint firstItem="bcr-Ed-ffa" firstAttribute="centerX" secondItem="h0O-pQ-O65" secondAttribute="centerX" id="jxs-tX-0BY"/>
+                            <constraint firstItem="Mr0-UG-VdN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="j1g-vp-7lM" secondAttribute="trailing" constant="5" id="qUm-9L-mvb"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addFundButton" destination="Mr0-UG-VdN" id="k2Q-Ko-fA9"/>
                         <outlet property="balanceContainer" destination="g3e-yn-FtU" id="e3s-Ex-TiS"/>
                         <outlet property="balanceLabel" destination="5Cn-Rd-N8l" id="Mto-B5-erB"/>
                         <outlet property="continueButton" destination="Rjj-dP-l3A" id="ZkJ-FE-Vmg"/>
+                        <outlet property="currencyLabel" destination="fyC-3T-Pr6" id="6uG-uQ-oap"/>
                         <outlet property="gradientLabel" destination="Ja1-Gj-u9u" id="ptq-id-pIE"/>
                         <outlet property="imgView" destination="hID-NK-dHK" id="z1q-A7-hXC"/>
                         <outlet property="inputField" destination="n6i-Cx-alL" id="YDT-T7-onO"/>
+                        <outlet property="insufficientLabel" destination="j1g-vp-7lM" id="I8A-fQ-Nzf"/>
                         <outlet property="maxButton" destination="zpr-AZ-lgr" id="M8e-dy-JFP"/>
                         <outlet property="navigationBar" destination="c1s-ff-Znh" id="uac-Ip-Pjn"/>
                         <outlet property="recipientDetailsLabel" destination="PTN-ng-S7V" id="DTv-eD-YtM"/>
