--- a/WindAssignment/Storyboards/Base.lproj/Main.storyboard
+++ b/WindAssignment/Storyboards/Base.lproj/Main.storyboard
@@ -29,26 +29,26 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@username or wallet address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGE-XK-W4j">
-                                <rect key="frame" x="24" y="125" width="185" height="18"/>
+                                <rect key="frame" x="24" y="124.99999999999999" width="184" height="16.333333333333329"/>
                                 <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="14"/>
                                 <color key="textColor" red="0.45882352941176469" green="0.50196078431372548" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iNl-kC-dEz" customClass="LeftIconTextField" customModule="WindAssignment" customModuleProvider="target">
-                                <rect key="frame" x="24" y="151" width="345" height="34"/>
+                                <rect key="frame" x="24" y="149.33333333333334" width="345" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="PzU-7N-dWI"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your PIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jpx-gi-CRg">
-                                <rect key="frame" x="24" y="211" width="92" height="18"/>
+                                <rect key="frame" x="24" y="209.33333333333334" width="92" height="16.333333333333343"/>
                                 <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="14"/>
                                 <color key="textColor" red="0.45882352939999999" green="0.50196078430000002" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQb-uQ-I57" customClass="BaseButton" customModule="WindAssignment" customModuleProvider="target">
-                                <rect key="frame" x="24" y="449" width="345" height="56"/>
+                                <rect key="frame" x="24" y="445.66666666666669" width="345" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="FVE-YL-q7L"/>
                                 </constraints>
@@ -58,11 +58,11 @@
                                     <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lBM-HK-i0I"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qca-2T-c11" customClass="PinField" customModule="WindAssignment" customModuleProvider="target">
-                                <rect key="frame" x="24" y="253" width="345" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TjF-1c-Dyw" customClass="PinStackView" customModule="WindAssignment" customModuleProvider="target">
+                                <rect key="frame" x="24" y="249.66666666666663" width="345" height="44"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="VAk-Q5-eJh"/>
+                                    <constraint firstAttribute="height" constant="44" id="Q3r-st-oAs"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -71,28 +71,29 @@
                         <constraints>
                             <constraint firstItem="cGE-XK-W4j" firstAttribute="top" secondItem="ccu-74-B3R" secondAttribute="bottom" constant="19" id="4DI-3g-FcL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jpx-gi-CRg" secondAttribute="trailing" constant="5" id="93z-vd-fG9"/>
+                            <constraint firstItem="TjF-1c-Dyw" firstAttribute="top" secondItem="Jpx-gi-CRg" secondAttribute="bottom" constant="24" id="9YJ-13-4Cd"/>
                             <constraint firstItem="lQb-uQ-I57" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9yk-cJ-B8G"/>
                             <constraint firstItem="Jpx-gi-CRg" firstAttribute="top" secondItem="iNl-kC-dEz" secondAttribute="bottom" constant="26" id="BXo-Hr-thw"/>
                             <constraint firstItem="lQb-uQ-I57" firstAttribute="top" secondItem="Jpx-gi-CRg" secondAttribute="bottom" constant="220" id="BsL-u7-Vxq"/>
                             <constraint firstItem="ccu-74-B3R" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Cgu-cq-81K"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TjF-1c-Dyw" secondAttribute="trailing" constant="24" id="DHA-N4-WJZ"/>
                             <constraint firstItem="ccu-74-B3R" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FxJ-gg-sEB"/>
                             <constraint firstItem="iNl-kC-dEz" firstAttribute="leading" secondItem="cGE-XK-W4j" secondAttribute="leading" id="IDp-uw-cyL"/>
                             <constraint firstItem="lQb-uQ-I57" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="MbM-yk-PRI"/>
                             <constraint firstItem="Jpx-gi-CRg" firstAttribute="leading" secondItem="cGE-XK-W4j" secondAttribute="leading" id="Mkd-On-KBl"/>
-                            <constraint firstItem="Qca-2T-c11" firstAttribute="top" secondItem="Jpx-gi-CRg" secondAttribute="bottom" constant="24" id="Nvv-DE-HaU"/>
+                            <constraint firstItem="TjF-1c-Dyw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="QEw-de-mkj"/>
+                            <constraint firstItem="lQb-uQ-I57" firstAttribute="top" secondItem="TjF-1c-Dyw" secondAttribute="bottom" constant="152" id="Tvd-Aa-l29"/>
                             <constraint firstItem="cGE-XK-W4j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="ZTM-3T-mb4"/>
                             <constraint firstItem="ccu-74-B3R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hNT-OH-c1c"/>
                             <constraint firstItem="iNl-kC-dEz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jcN-Qs-B9y"/>
                             <constraint firstItem="iNl-kC-dEz" firstAttribute="top" secondItem="cGE-XK-W4j" secondAttribute="bottom" constant="8" symbolic="YES" id="lqt-eI-FXM"/>
-                            <constraint firstItem="Qca-2T-c11" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="qO4-E7-Lqo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cGE-XK-W4j" secondAttribute="trailing" constant="5" id="rqz-a4-W9l"/>
-                            <constraint firstItem="Qca-2T-c11" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tiS-xK-4jj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="e43-Zo-OTQ"/>
                     <connections>
                         <outlet property="loginButton" destination="lQb-uQ-I57" id="nXS-hk-9Tp"/>
-                        <outlet property="pinField" destination="Qca-2T-c11" id="2Oe-Ik-Rol"/>
+                        <outlet property="pinStackView" destination="TjF-1c-Dyw" id="Zbp-oJ-abj"/>
                         <outlet property="userNameField" destination="iNl-kC-dEz" id="Otw-20-1Az"/>
                     </connections>
                 </viewController>
@@ -115,13 +116,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyc-M5-XXU">
-                                <rect key="frame" x="18" y="131" width="68" height="21"/>
+                                <rect key="frame" x="18" y="131" width="68" height="20.333333333333343"/>
                                 <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
                                 <color key="textColor" red="0.45882352939999999" green="0.50196078430000002" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bcr-Ed-ffa">
-                                <rect key="frame" x="18" y="160" width="357" height="52"/>
+                                <rect key="frame" x="18" y="159.33333333333334" width="357" height="52"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="hID-NK-dHK">
                                         <rect key="frame" x="12" y="8" width="36" height="36"/>
@@ -152,7 +153,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g3e-yn-FtU">
-                                <rect key="frame" x="18" y="228" width="357" height="120"/>
+                                <rect key="frame" x="18" y="227.33333333333337" width="357" height="120"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.00" textAlignment="natural" minimumFontSize="48" translatesAutoresizingMaskIntoConstraints="NO" id="n6i-Cx-alL">
                                         <rect key="frame" x="22" y="8" width="99" height="80"/>
@@ -164,19 +165,19 @@
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USDC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyC-3T-Pr6">
-                                        <rect key="frame" x="22" y="83" width="33" height="16"/>
+                                        <rect key="frame" x="22" y="82.999999999999972" width="33" height="15.333333333333329"/>
                                         <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="12"/>
                                         <color key="textColor" red="0.3411764705882353" green="0.35686274509803922" blue="0.38431372549019605" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance USDC 0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Cn-Rd-N8l">
-                                        <rect key="frame" x="243" y="83" width="106" height="16"/>
+                                        <rect key="frame" x="243" y="82.999999999999972" width="106" height="15.333333333333329"/>
                                         <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="12"/>
                                         <color key="textColor" red="0.3411764706" green="0.35686274509999999" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zpr-AZ-lgr" customClass="RoundedButton" customModule="WindAssignment" customModuleProvider="target">
-                                        <rect key="frame" x="290" y="30.666666666666686" width="44" height="35"/>
+                                        <rect key="frame" x="290" y="30.666666666666657" width="44" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="BCQ-Ln-Avz"/>
                                             <constraint firstAttribute="height" constant="35" id="qPM-zp-TCO"/>
@@ -204,7 +205,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rjj-dP-l3A" customClass="BaseButton" customModule="WindAssignment" customModuleProvider="target">
-                                <rect key="frame" x="18" y="449" width="357" height="56"/>
+                                <rect key="frame" x="18" y="448.33333333333331" width="357" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="3Ou-Ny-ci5"/>
                                 </constraints>
@@ -215,13 +216,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insufficient Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1g-vp-7lM">
-                                <rect key="frame" x="32" y="372" width="141" height="21"/>
+                                <rect key="frame" x="32" y="371.33333333333331" width="140.66666666666666" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
                                 <color key="textColor" red="0.8784313725490196" green="0.2627450980392157" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mr0-UG-VdN" customClass="RoundedButton" customModule="WindAssignment" customModuleProvider="target">
-                                <rect key="frame" x="276" y="368.66666666666669" width="85" height="28"/>
+                                <rect key="frame" x="276" y="367.66666666666669" width="85" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="kuo-nW-wyk"/>
                                     <constraint firstAttribute="width" constant="85" id="u4B-ko-nQP"/>
