--- a/WindAssignment/Storyboards/Base.lproj/Main.storyboard
+++ b/WindAssignment/Storyboards/Base.lproj/Main.storyboard
@@ -131,24 +131,31 @@
                                             <constraint firstAttribute="height" constant="36" id="bYN-hW-Fjv"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTN-ng-S7V">
-                                        <rect key="frame" x="61" y="15.999999999999998" width="288" height="20.333333333333329"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="1233513" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTN-ng-S7V" customClass="GradientLabel" customModule="WindAssignment" customModuleProvider="target">
+                                        <rect key="frame" x="61" y="15.999999999999998" width="55.333333333333343" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ja1-Gj-u9u" customClass="GradientLabel" customModule="WindAssignment" customModuleProvider="target">
-                                        <rect key="frame" x="61" y="16" width="288" height="20.333333333333332"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" - 3CGH...UwvX" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tli-ct-bNu">
+                                        <rect key="frame" x="116.33333333333334" y="15.999999999999998" width="112" height="20.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="112" id="FiO-Me-uus"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tli-ct-bNu" secondAttribute="trailing" constant="8" id="KbA-d6-IrP"/>
                                     <constraint firstItem="hID-NK-dHK" firstAttribute="leading" secondItem="bcr-Ed-ffa" secondAttribute="leading" constant="12" id="Rgu-1r-NyB"/>
+                                    <constraint firstItem="Tli-ct-bNu" firstAttribute="leading" secondItem="PTN-ng-S7V" secondAttribute="trailing" id="WLM-yX-29Y"/>
+                                    <constraint firstItem="Tli-ct-bNu" firstAttribute="centerY" secondItem="PTN-ng-S7V" secondAttribute="centerY" id="b8O-Vf-7vU"/>
                                     <constraint firstItem="PTN-ng-S7V" firstAttribute="leading" secondItem="hID-NK-dHK" secondAttribute="trailing" constant="13" id="bW0-tM-qWG"/>
                                     <constraint firstItem="PTN-ng-S7V" firstAttribute="centerY" secondItem="bcr-Ed-ffa" secondAttribute="centerY" id="jgc-KY-TkH"/>
                                     <constraint firstItem="hID-NK-dHK" firstAttribute="centerY" secondItem="bcr-Ed-ffa" secondAttribute="centerY" id="nbt-2a-lmU"/>
-                                    <constraint firstAttribute="trailing" secondItem="PTN-ng-S7V" secondAttribute="trailing" constant="8" id="uTN-UT-ZXb"/>
                                     <constraint firstAttribute="height" constant="52" id="vug-Ja-O57"/>
                                 </constraints>
                             </view>
@@ -225,7 +232,7 @@
                                 <rect key="frame" x="276" y="367.66666666666669" width="85" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="kuo-nW-wyk"/>
-                                    <constraint firstAttribute="width" constant="85" id="u4B-ko-nQP"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="85" id="u4B-ko-nQP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -263,14 +270,14 @@
                         <outlet property="balanceLabel" destination="5Cn-Rd-N8l" id="Mto-B5-erB"/>
                         <outlet property="continueButton" destination="Rjj-dP-l3A" id="ZkJ-FE-Vmg"/>
                         <outlet property="currencyLabel" destination="fyC-3T-Pr6" id="6uG-uQ-oap"/>
-                        <outlet property="gradientLabel" destination="Ja1-Gj-u9u" id="ptq-id-pIE"/>
                         <outlet property="imgView" destination="hID-NK-dHK" id="z1q-A7-hXC"/>
                         <outlet property="inputField" destination="n6i-Cx-alL" id="YDT-T7-onO"/>
                         <outlet property="insufficientLabel" destination="j1g-vp-7lM" id="I8A-fQ-Nzf"/>
                         <outlet property="maxButton" destination="zpr-AZ-lgr" id="M8e-dy-JFP"/>
                         <outlet property="navigationBar" destination="c1s-ff-Znh" id="uac-Ip-Pjn"/>
-                        <outlet property="recipientDetailsLabel" destination="PTN-ng-S7V" id="DTv-eD-YtM"/>
+                        <outlet property="recipientNameLabel" destination="PTN-ng-S7V" id="wEe-Gx-9UT"/>
                         <outlet property="recipientView" destination="bcr-Ed-ffa" id="Mof-KQ-O5Y"/>
+                        <outlet property="walletAddressLabel" destination="Tli-ct-bNu" id="pSL-1u-iqZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wlL-Vf-Le1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
